--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 #header{
     width: 100%;
     height: 150px;
+    background-image: url("../image1.jpg");
     background-color: blue;  
 }
 .logo{
