--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 #main{
     width: 100%;
-    height: auto;
-    background-color: rgb(75, 33, 33);
-}   
-#form{
-    height: 200px;
-    width: 10%;
+    height: 300px;
+    background-image: url("../image1.jpg");
+    background-color: darkslategray;
+    color: gainsboro;
 }
