--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,35 @@
 #header{
     width: 100%;
-    height: 150px;
-    background-image: url("../image1.jpg");
-    background-color: blue;  
+    height: 300px;  
 }
-.logo{
+h1 {
+    color: rgb(255, 255, 255);
+    font-weight: bold;   
+    text-align: center;
+    font-size: 40px;
+    text-shadow: 3px 2.5px #075e2b;
+} 
+.jumbotron {
     width: 100%;
-    height: 150px;
+    padding: 80px 40px;
+    box-sizing: border-box;
+    text-align: center;
+    color: white;
+    background-color: turquoise;
+    background-image: url(../imagemaitewuna.png);
+    background-size: cover;
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.459);
+    opacity: 0.4;
+}
+.jumbotron h2,
+.jumbotron p {
+    position: relative;
 }
