--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 #main{
-    width: 100%;
-    height: 300px;
-    background-image: url("../image1.jpg");
-    background-color: darkslategray;
-    color: gainsboro;
+     width: 100%;
+     height: 300px;
+     background-image: url("../image1.jpg");
+}
+form{
+     text-align: center; 
+     color: white;
 }
