--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,38 @@
 #footer {
     width: 100%;
     height: 100px;
-    background-color: rgb(110, 114, 111);
+    background-color: rgb(255, 194, 125);
 }
-h2 {
-    color: #00ffff;
+ h2 {
+    color: #653cd6;
     text-align: inherit;
     margin: 0;
     text-size-adjust: 30px;
-}
+} 
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .navbar a.active {
+    background-color: #4CAF50;
+    color: white;
