--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@ h1 {
     font-weight: bold;   
     text-align: center;
     font-size: 40px;
-    text-shadow: 3px 2.5px #075e2b;
+    text-shadow: 3px 2.5px #ca8d3e;
 } 
 .jumbotron {
     width: 100%;
@@ -33,3 +33,31 @@ h1 {
 .jumbotron p {
     position: relative;
 }
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: rgb(0, 0, 0);
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: rgb(52, 165, 180);
+    color: white;
+  }
+  
